--- a/src/Components/AsideFilter/AsideFilter.scss
+++ b/src/Components/AsideFilter/AsideFilter.scss
@@ -1,18 +1,17 @@
 @import '../../variables.scss';
 
 .aside-filter {
-  width: 232px;
   display: flex;
   flex-direction: column;
   height: 252px;
   margin: 20px;
   @media (max-width: 794px) {
-    width: auto;
-    margin: 0;
+    margin: 0 0 20px 0;
   }
 }
 
 .transfer-group {
+  width: 232px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -21,6 +20,9 @@
   box-shadow: $box-shadow;
   margin-bottom: 20px;
   padding: 10px;
+  @media (max-width: 794px) {
+    width: auto;
+  }
   &__title {
     text-transform: uppercase;
     margin-top: 10px;
