--- a/src/Components/TicketSortingPanel/TicketSortingPanel.scss
+++ b/src/Components/TicketSortingPanel/TicketSortingPanel.scss
@@ -16,7 +16,9 @@
     padding: 20px;
     border: 1px solid $color-gray;
     display: flex;
+    justify-content: center;
     align-items: center;
+    width: 50%;
     @media (max-width: 794px) {
     }
     &:first-child {
