--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -4,6 +4,7 @@
   padding: 40px 20px;
   @media (max-width: 400px) {
     padding: 0;
+    margin: 20px;
   }
 }
 .main-content {
@@ -13,4 +14,10 @@
     flex-direction: column;
     gap: 10px;
   }
+}
+
+.main-content__list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
