--- a/src/Components/TicketList/TicketList.scss
+++ b/src/Components/TicketList/TicketList.scss
@@ -1,6 +1,7 @@
 @import '../../variables.scss';
 
 .show-more_button {
+  margin-top: 20px;
   width: 100%;
   height: 50px;
   color: $color-white;
